--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,23 @@
+annotated-types==0.5.0
 blinker==1.6.2
 certifi==2023.7.22
+cffi==1.16.0
 charset-normalizer==3.2.0
 click==8.1.7
+cryptography==41.0.4
 Flask==2.3.3
 idna==3.4
 importlib-metadata==6.8.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+pycparser==2.21
+pydantic==2.4.2
+pydantic_core==2.10.1
 PyJWT==2.8.0
 python-dotenv==1.0.0
 requests==2.31.0
+typing_extensions==4.8.0
 urllib3==2.0.5
 Werkzeug==2.3.7
 zipp==3.17.0
