--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ pydantic==2.4.2
 pydantic_core==2.10.1
 PyJWT==2.8.0
 python-dotenv==1.0.0
+python-ulid==2.6.0
 requests==2.31.0
 typing_extensions==4.8.0
 urllib3==2.0.5
