--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ charset-normalizer==3.2.0
 click==8.1.7
 cryptography==41.0.4
 Flask==2.3.3
+greenlet==3.0.3
 idna==3.4
 importlib-metadata==6.8.0
 itsdangerous==2.1.2
@@ -15,9 +16,11 @@ pycparser==2.21
 pydantic==2.4.2
 pydantic_core==2.10.1
 PyJWT==2.8.0
+PyMySQL==1.1.1
 python-dotenv==1.0.0
 python-ulid==2.6.0
 requests==2.31.0
+SQLAlchemy==2.0.31
 typing_extensions==4.8.0
 urllib3==2.0.5
 Werkzeug==2.3.7
