--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,19 @@ networks:
 
 services:
   web:
-    build: .
+    build:
+      context: .
+      dockerfile: ./Dockerfile
+    command: ["sh", "-c", "pip install debugpy -t /tmp && python /tmp/debugpy --wait-for-client --listen 0.0.0.0:5678 -m flask run --no-debugger --no-reload --host 0.0.0.0 --port 5000"]
     ports:
-      - "5000:5000"
+      - 5000:5000
+      - 5678:5678
     networks:
       - event_hub_network
     volumes:
       - .:/event-hub-backend
     environment:
+      - FLASK_APP=wsgi.py
       - FLASK_ENV=development
       - APPLICATION_HOST=0.0.0.0
 
